bin_PROGRAMS = \
	web_digistar

web_digistar_SOURCES = \
	main.c
	
htmlfilesdir = $(datadir)
javascriptdir = $(datadir)/js
imagesdir = $(datadir)/images
appdir = $(datadir)/app
templatesdir = $(bindir)/templates

htmlfiles_DATA = htdocs/index.html \
					htdocs/digistar_styles.css \
					htdocs/index.wn
					
javascript_DATA = htdocs/js/*

images_DATA = htdocs/images/*

app_DATA = htdocs/app/*

templates_DATA = htdocs/templates/*
